--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="%PUBLIC_URL%/static/js/bundle.js?v=%REACT_APP_VERSION%"></script>
 
 <script>
 
